tests/ui/where-clauses/higher-ranked-fn-type.quiet.stderr
error[E0277]: the trait bound `for<'a> fn(&'a ()): Foo` is not satisfied
  --> $DIR/higher-ranked-fn-type.rs:18:5
   |
LL |     (for<'a> fn(&'a ())): Foo,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `for<'a> fn(&'a ())`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/higher-ranked-fn-type.rs:6:1
   |
LL | trait Foo {
   | ^^^^^^^^^
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `for<'b> fn(&'b ()): Foo` is not satisfied
  --> $DIR/higher-ranked-fn-type.rs:22:5
   |
LL |     called()
   |     ^^^^^^^^ the trait `for<'b> Foo` is not implemented for `fn(&'b ())`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/higher-ranked-fn-type.rs:6:1
   |
LL | trait Foo {
   | ^^^^^^^^^
note: required by a bound in `called`
  --> $DIR/higher-ranked-fn-type.rs:12:25
   |
LL | fn called()
   |    ------ required by a bound in this function
LL | where
LL |     for<'b> fn(&'b ()): Foo,
   |                         ^^^ required by this bound in `called`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
